--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2107,7 +2107,7 @@
 		-ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: #f56a6a;
+		color: #36569F;
 		text-decoration: none;
 	}
 
@@ -2282,7 +2282,7 @@
 	}
 
 	header.major > :last-child {
-		border-bottom: solid 3px #f56a6a;
+		border-bottom: solid 3px #3154A4;
 		display: inline-block;
 		margin: 0 0 2em 0;
 		padding: 0 0.75em 0.5em 0;
@@ -2953,8 +2953,9 @@
 		background-color: transparent;
 		border-radius: 0.375em;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #f56a6a;
-		color: #f56a6a !important;
+/*        box-shadow: inset 0 0 0 2px #f56a6a;*/
+        box-shadow: inset 0 0 0 2px #FFAF3F;
+		color: #FFAF3F !important;
 		cursor: pointer;
 		display: inline-block;
 		font-family: "Roboto Slab", serif;
@@ -3792,7 +3793,7 @@
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		border-bottom: solid 5px #f56a6a;
+        border-bottom: solid 5px #3154A4;
 		padding: 6em 0 1em 0;
 		position: relative;
 	}
