--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2112,8 +2112,8 @@
 	}
 
 		a:hover {
-			border-bottom-color: #f56a6a;
-			color: #f56a6a !important;
+			border-bottom-color: #FFAF3F;
+			color: #FFAF3F !important;
 		}
 
 			a:hover strong {
@@ -2349,7 +2349,7 @@
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #f56a6a;
+            border-color: #f56a6a;
 			box-shadow: 0 0 0 1px #f56a6a;
 		}
 
@@ -2697,7 +2697,7 @@
 				}
 
 				ul.contact li:before {
-					color: #f56a6a;
+					color: #FFAF3F;
 					display: inline-block;
 					font-size: 1.5em;
 					height: 1.125em;
@@ -3028,7 +3028,7 @@
 		input[type="button"].special,
 		button.special,
 		.button.special {
-			background-color: #f56a6a;
+			background-color: #FFAF3F;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -3038,7 +3038,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #f67878;
+				background-color: #FFAF3F;
 			}
 
 			input[type="submit"].special:active,
@@ -3046,7 +3046,7 @@
 			input[type="button"].special:active,
 			button.special:active,
 			.button.special:active {
-				background-color: #f45c5c;
+				background-color: #FFAF3F;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -3148,7 +3148,7 @@
 			}
 
 				.features article .icon:before {
-					color: #f56a6a;
+					color: #FFAF3F;
 					font-size: 2.75rem;
 					position: relative;
 					top: 0.05em;
